--- a/.env
+++ b/.env
@@ -12,3 +12,8 @@
 #
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
+
+###> symfony/framework-bundle ###
+APP_ENV=dev
+APP_SECRET=6f6756910f3b48d6a48b4b31a4ce8d42
+###< symfony/framework-bundle ###
