--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@ state/*-*
 build/*
 phpunit.xml
 .phpunit.result.cache
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
