--- a/composer.json
+++ b/composer.json
@@ -13,23 +13,36 @@
         }
     ],
      "require": {
-        "php": "~7.4",
-        "silex/silex": "~2.0",
-        "guzzle/guzzle": ">=3.8",
-        "symfony/process": "~3|~4|~5",
-        "lstrojny/hmmmath": ">=0.5.0",
-        "opis/closure": "^3.6",
-        "symfony/flex": "^1.12"
-    },
+         "php": "~7.4",
+         "symfony/process": "~3|~4|~5",
+         "lstrojny/hmmmath": ">=0.5.0",
+         "opis/closure": "^3.6",
+         "symfony/flex": "^1.12",
+         "symfony/framework-bundle": "^5.2",
+         "symfony/dotenv": "^5.2",
+         "symfony/yaml": "^5.2",
+         "symfony/event-dispatcher": "^5.2",
+         "guzzlehttp/guzzle": "^7.3"
+     },
     "require-dev": {
         "internations/kodierungsregelwerksammlung": "~0.23.0",
         "internations/testing-component": "1.0.1",
         "phpunit/phpunit": "9.5"
     },
     "autoload": {
-        "psr-4": {"InterNations\\Component\\HttpMock\\": "src/"}
+        "psr-4": {
+            "InterNations\\Component\\HttpMock\\": "src/"
+        }
     },
     "autoload-dev": {
-        "psr-4": {"InterNations\\Component\\HttpMock\\Tests\\": "tests/"}
+        "psr-4": {
+            "InterNations\\Component\\HttpMock\\Tests\\": "tests/"
+        }
+    },
+    "scripts": {
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+        }
     }
 }
